--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
     "socket.io": "^2.1.1"
